Added unotharized issues
